<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:keepScreenOn="true"
    tools:context=".RunCalibrationActivity">

    <View
        android:id="@+id/calibration_indicator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/factor_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/speed_label"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/speed_"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/accuracy_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/accuracy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_"
        android:textColor="#FCE4E4E4"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/regression"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/factor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/factor_"
        android:textColor="#FCE4E4E4"
        android:textSize="24dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_label" />

    <com.jentsch.anemometer.view.LinearRegressionView
        android:id="@+id/regression"
        android:layout_width="match_parent"
        android:layout_height="240dip"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintStart_toStartOf="parent" />

    <com.jentsch.anemometer.view.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="160dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/calibration_help_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/helpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/calibration_help"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onStartCalibration"
            android:padding="40dp"
            android:text="@string/start_calibration" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>