<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calibration_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calibration_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/anemometer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/wind_speed_label"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeStepGranularity="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:text="@string/wind_speed"
            android:textColor="@color/textColor"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.69" />

        <TextView
            android:id="@+id/wind_speed_value1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="-"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/wind_speed_value1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/meterpersecond"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/wind_speed_value2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="-"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_value1" />

        <TextView
            android:id="@+id/wind_speed_value2b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/kmperhour"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toEndOf="@+id/wind_speed_value2"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_value1" />

        <TextView
            android:id="@+id/wind_speed_value3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="-"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_value2" />

        <TextView
            android:id="@+id/wind_speed_value3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/bft"
            android:textSize="40dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:textColor="@color/textColor"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_value2" />

        <TextView
            android:id="@+id/rotation_speed_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:text="-"
            android:textColor="@color/textColor"
            android:textSize="24dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/rotation_speed_label" />

        <TextView
            android:id="@+id/rotation_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:text="@string/hz"
            android:textColor="@color/textColor"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/wind_speed_value3b" />


        <TextView
            android:id="@+id/rotation_speed_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:padding="5dp"
            android:shadowColor="@color/textColor"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="8"
            android:text="@string/rotation_speed_note"
            android:textColor="@color/textColor"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>